--- a/build.xml
+++ b/build.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project default="create_run_jar" name="Create Runnable Jar for Project AB1.0 with Jar-in-Jar Loader">
+<project default="jar" name="Create Runnable Jar for Project AB1.0 with Jar-in-Jar Loader">
     <!--ANT 1.7 is required                                        -->
- <property name="lib.dir"     value="external"/>
+ 	<property name="lib.dir"     value="external"/>
 
     <path id="classpath">
         <fileset dir="${lib.dir}" includes="**/*.jar"/>
     </path>    
-<target name="clean">
+	<target name="clean">
         <delete dir="src" includes = "**/*.class"/>
     </target>
 
     <target name="compile">
         <mkdir dir="src"/>
-	 <javac srcdir="src" destdir="src" classpathref="classpath"/>
+	 	<javac srcdir="src" destdir="src" classpathref="classpath"/>
     </target>  
 
-
-  <target name="jar">
+  	<target name="jar">
         <jar destfile="ABSoftware.jar">
             <manifest>
                 <attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader"/>
